--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "build": "remix build",
     "dev": "remix dev --manual",
     "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "dev:css": "sass --watch app/:app/",
+    "build:css": "node-sass ./styles -o ./app/styles --output-style compressed"
   },
   "dependencies": {
     "@remix-run/css-bundle": "^2.0.0",
     "@remix-run/node": "^2.0.0",
     "@remix-run/react": "^2.0.0",
     "@remix-run/serve": "^2.0.0",
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
+    "esbuild": "^0.19.3",
+    "esbuild-sass-plugin": "^2.15.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rfs": "^10.0.0",
+    "sass": "^1.67.0",
+    "sass-loader": "^13.3.2",
+    "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.0.0",
@@ -24,6 +34,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.38.0",
+    "node-sass": "^9.0.0",
     "typescript": "^5.1.6"
   },
   "engines": {
